--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.15.0",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.4.2",
+    "universal-cookie": "^7.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
