--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "recoil": "^0.7.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.4.2",
     "universal-cookie": "^7.1.0",
